[package]
name = "rust-eth-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.7", features = ["rustls"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1.28.2", option = true, features = ["full"] }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
eyre = "0.6.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
serde_derive = "1.0.151"
serde_json = "1.0"